--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.8",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.2",
