--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@fontsource/plus-jakarta-sans": "^5.0.19",
+    "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.8",
     "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.2",
