--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint src --ext .jsx,.js,.tsx,.ts  --no-error-on-unmatched-pattern --fix && stylelint --fix src/{,*/}*.{scss,css} --allow-empty-input"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@fontsource/plus-jakarta-sans": "^5.0.19",
     "framer-motion": "^11.0.24",
     "react": "^18.2.0",
