--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "business-card",
+  "homepage": "https://https://gennadiipaninov.github.io/cardfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
